Fix wrapping bug in Firefox for pivot facet
Trigger tooltips on hover

--- a/app/assets/stylesheets/components/facets.scss
+++ b/app/assets/stylesheets/components/facets.scss
@@ -55,7 +55,7 @@
 .facet-values .facet-label,
 .facet-values .facet-count {
     font-size: .9em;
-    white-space: -moz-pre-space;
+    -moz-hyphens: none;
 }
 
 .facets-heading {
